compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_get_stmt_wrong_value_stream.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type s : int\nvar k : int\nget : s, k\n"
---
"s"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"k"@"src/main.t:17..18" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:31..32: cannot use `s` as an expression
| error for src/main.t:31..32: `s` is a reference to a type, not a variable
| note for src/main.t:5..6: `s` declared here
