compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_if_wrong_types.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "if 1 then\nelsif 1.0 then\nelsif 'yee' then\nelsif \"wahhh\" then\nend if\n"
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:3..4: mismatched types
| note for src/main.t:3..4: this is of type `{integer}`
| info: expected a `boolean` type
error at src/main.t:16..19: mismatched types
| note for src/main.t:16..19: this is of type `real`
| info: expected a `boolean` type
error at src/main.t:31..36: mismatched types
| note for src/main.t:31..36: this is of type `char(3)`
| info: expected a `boolean` type
error at src/main.t:48..55: mismatched types
| note for src/main.t:48..55: this is of type `string`
| info: expected a `boolean` type
