compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_if_wrong_value_condition.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type b : boolean\nif b then\nelsif b then\nend if"
---
"b"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:20..21: cannot use `b` as an expression
| error for src/main.t:20..21: `b` is a reference to a type, not a variable
| note for src/main.t:5..6: `b` declared here
error at src/main.t:33..34: cannot use `b` as an expression
| error for src/main.t:33..34: `b` is a reference to a type, not a variable
| note for src/main.t:5..6: `b` declared here
