compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_as_var.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var outer : int\nmodule _\n    import var outer\n    outer := 6\nend _\n"
---
"outer"@"src/main.t:4..9" [ConstVar(Var, No)]: int
"_"@"src/main.t:23..24" [Module(No)]: <error>
"outer"@"src/main.t:40..45" [Import]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
