compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_implied_on_never_applicable.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type ty : int\nmodule _\n    import ty\n    type tou : ty\nend _\n"
---
"ty"@"src/main.t:5..7" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"_"@"src/main.t:21..22" [Module(No)]: <error>
"ty"@"src/main.t:34..36" [Import]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"tou"@"src/main.t:46..49" [Type]: alias[DefId(PackageId(3072), LocalDefId(3))] of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
