compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_import_chain.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var outer : int\nmodule a\n    import outer\n\n    module b\n        import outer\n\n        module c\n            import outer\n\n            var k := outer\n        end c\n    end b\n\nend a\n"
---
"outer"@(FileId(1), 4..9) [ConstVar(Var, No)]: int
"a"@(FileId(1), 23..24) [Module(No)]: <error>
"outer"@(FileId(1), 36..41) [Import]: int
"b"@(FileId(1), 54..55) [Module(No)]: <error>
"outer"@(FileId(1), 71..76) [Import]: int
"c"@(FileId(1), 93..94) [Module(No)]: <error>
"outer"@(FileId(1), 114..119) [Import]: int
"k"@(FileId(1), 137..138) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

