compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_mutable_on_never_applicable.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type ty : int\nmodule _\n    import var ty\n    type tou : ty\nend _\n"
---
"ty"@(FileId(1), 5..7) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"_"@(FileId(1), 21..22) [Module(No)]: <error>
"ty"@(FileId(1), 38..40) [Import]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"tou"@(FileId(1), 50..53) [Type]: alias[DefId(PackageId(0), LocalDefId(3))] of int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 34..37): cannot use `var` here
| error for (FileId(1), 34..37): `var` can only be applied to variables
| note for (FileId(1), 5..7): `ty` declared here
