compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_on_use.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var blah : int\nmodule _\n    import blah\n    var k := blah\nend _\n"
---
"blah"@"src/main.t:4..8" [ConstVar(Var, No)]: int
"_"@"src/main.t:22..23" [Module(No)]: <error>
"blah"@"src/main.t:35..39" [Import]: int
"k"@"src/main.t:48..49" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
